assets/css/style.css
/*  import fonts from google fonts
    use: font-family: 'Assistant', sans-serif; for body text
    use: font-family: 'Quicksand', sans-serif;
     */

@import url("https://fonts.googleapis.com/css2?family=Assistant:wght@200;300;400&family=Quicksand:wght@300;400;500;600;700&display=swap");

/* colour palettes
     White Smoke:       #F5F5F5
     Medium Slate Blue  #735CEB
     Tropical Indigo:   #9D8DF1
     Payne's Gray:      #536B79
     Night:             #121213
  */
body {
  background-color: #f5f5f5;
  position: relative;
}

p {
  font-family: "Assistant", sans-serif;
}

h2 {
  font-family: "Quicksand", sans-serif;
  font-size: 42pt;
  font-weight: bolder;
  color: #735ceb;
  text-align: center;
}

h3 {
  font-family: "Quicksand", sans-serif;
  font-size: 28pt;
  font-weight: bolder;
  color: #735ceb;
  text-align: center;
}

/* header contact details  */

#contact-header {
  color: #f5f5f5;
  font-family: "Assistant", sans-serif;
  padding-top: 10px;
  background-color: #735ceb;
}

.contact-header p {
  font-size: 12pt;
  color: #f5f5f5;
}

#contact-header b {
  font-family: "Quicksand", sans-serif;
  color: #f5f5f5;
}

/* header logo */

#header {
  background-color: #f5f5f5;
}

.header-bottom {
  background-color: #f5f5f5;
}

.jenamin {
  font-family: "Quicksand", sans-serif;
  font-weight: bolder;
  font-size: 42pt;
  color: #735ceb;
}

.tagline {
  font-family: "Quicksand", sans-serif;
  font-size: 18pt;
  line-height: 0;
  color: #121213;
  padding: 0;
}

.logo {
  min-width: fit-content;
  max-width: fit-content;
  padding-bottom: 0;
  margin-bottom: 0;
}

.logo a:hover {
  text-decoration: none;
}

/* header links menu */

.nav {
  background-color: #f5f5f5;
}

.menu {
  background-color: #f5f5f5;
}

.links {
  text-decoration: none;
  text-align: center;
  font-size: 24px;
  font-weight: bold;
  line-height: 0;
}

.links li {
  padding: 0px 15px 0px 15px;
}

.links a {
  color: #735ceb;
}

.links a:hover {
  color: #9d8df1;
  text-decoration: underline;
  text-decoration-thickness: 7px;
  text-decoration-color: #9d8df1;
}

.navbar {
  background-color: #f5f5f5;
  padding-bottom: 0;
  margin-bottom: 8px;
}

.nav-item .active:hover {
  text-decoration: none;
}

.collapsed-menu {
  line-height: 10pt;
}

.breadcrumbs {
  background-color: #f5f5f5;
}

.breadcrumb {
  background-color: #f5f5f5;
  margin-bottom: 0;
}

.breadcrumb a {
  background-color: #f5f5f5;
  color: #735ceb;
  font-weight: bold;
  text-decoration: none;
}

.breadcrumb a:hover {
  text-decoration: underline;
}

/* index.html  */

.main-section {
  color: #121213;
  position: absolute;
  background-color: #f5f5f5;
}

.hero-image {
  height: 65vh;
  background-color: #f5f5f5;
  animation: forwards;
  background: url(../images/arjan-stalpers-8-sgismcDAQ-unsplash.jpg) no-repeat
    center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  overflow: scroll;
  display: flex;
  align-items: center;
  justify-content: center;
  position: relative;
}

.reasons-container {
  padding-bottom: 20px;
  padding-top: 20px;
  padding-left: 50px;
  padding-right: 50px;
  font-size: 16pt;
}

.divider-purple {
  align-self: center;
  max-width: 5px;
  height: 100px;
  background-color: #735ceb;
  padding: 0px;
  margin: 20px;
}

/* privacy.html */

.privacy-policy {
  width: 80%;
  height: auto;
  font-size: 14pt;
  font-family: "Assistant", sans-serif;
}

.privacy-policy h3 {
  padding-bottom: 20pt;
}

/* footer positioning */

footer {
  width: 100%;
  position: relative;
  bottom: 0;
  left: 0;
  padding-bottom: 10px;
  padding-top: 10px;
}

.footer-container {
  color: #f5f5f5;
  background-color: #735ceb;
}

.socials i {
  font-size: larger;
  color: #f5f5f5;
}

.socials li {
  list-style: none;
}

/* footer styling  */

.footer-upper {
  color: #f5f5f5;
  text-align: center;
}

.map {
  padding: 10px 10px 10px 10px;
}

.footer-divider {
  align-self: center;
  max-width: 5px;
  height: 150px;
  background-color: #f5f5f5;
  padding: 0;
  margin: 0;
}

.essential-info {
  padding-top: 10px;
  align-self: center;
  text-align: center;
  font-size: larger;
  margin-right: 0;
  font-family: "Assistant", sans-serif;
}

.essential-info i {
  color: #f5f5f5;
}

.essential-info h4 {
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
}

/* footer lower */

.footer-lower {
  padding-top: 10px;
  text-align: center;
  color: #f5f5f5;
  background-color: #536b79;
}

.copyright {
  font-family: "Quicksand", sans-serif;
  text-align: center;
}

.footer-lower a {
  font-family: "Quicksand", sans-serif;
  font-weight: bold;
  text-decoration: none;
  color: #f5f5f5;
}

.footer-lower a:hover {
  font-weight: bolder;
  color: #121213;
  text-decoration: underline;
  text-decoration-thickness: 5px;
}

.footer-lower i:hover {
  font-weight: bolder;
  color: #121213;
}

@media (min-width: 990px) {
  .menu {
    position: relative;
  }

  .links {
    position: absolute;
    padding-right: 10px;
    right: 0;
    bottom: 0;
  }
}

